--- a/public/styles.css
+++ b/public/styles.css
@@ -25,6 +25,28 @@ canvas {
     background-color: white;
 }
 
+h1 {
+    color: #ffffff;
+    margin-bottom: 5px;
+}
+
+a {
+    text-decoration: none;
+}
+
+.sign {
+    width: 200px;
+    -webkit-box-shadow: -3px 0px 17px -4px rgba(5, 2, 5, 1);
+    -moz-box-shadow: -3px 0px 17px -4px rgba(5, 2, 5, 1);
+    box-shadow: -3px 0px 17px -4px rgba(5, 2, 5, 1);
+    border-radius: 5px;
+    margin-top: 10px;
+    background-color: white;
+}
+
+.text {
+    font-size: 13px;
+}
 /* MAIN */
 /* .container {
     display: flex;
@@ -38,87 +60,154 @@ canvas {
     height: 30vh;
     /* color: #effcef; */
 }
-/* ////////////////////////////////////////////////////////////////////////// */
-/* REGISTER */
-
-/* .form {
-    top: 20px;
-    display: flex;
-    flex-direction: column;
-    width: 70%;
-    min-height: 50vh;
-    justify-content: center;
-    align-items: center;
-    background-color: #ccedd2;
-    padding-bottom: 20px;
-} */
-
-/* form {
-    width: 100%;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-} */
-
-.errinform {
-    height: 20px;
-    text-align: center;
-    width: 100%;
-}
-
-.inputs {
-    display: flex;
-    justify-content: center;
-    /* padding-bottom: 10px; */
-    flex-direction: row;
-}
-
-.input {
-    margin-top: 5px;
-}
-
-.text {
-    font-size: 13px;
-}
-
-.submit {
-    margin-top: 15px;
-    margin-bottom: 5px;
-}
-
 /* Header ////////////////////////////////////////////////////////////////////*/
 .header {
     display: flex;
-    justify-content: center;
+    justify-content: flex-end;
     width: 100%;
     height: 50px;
-    /* background-color: #655c56; */
+    /* border: 2px solid pink; */
 }
 
 .inheader {
     display: flex;
-    width: 20%;
+    width: 10%;
+    justify-content: center;
+    align-items: center;
+    /* border: 2px solid green; */
+}
+.headerlinks {
+    color: white;
+    font-weight: bold;
+    /* border: 2px solid yellow; */
+    font-size: 15px;
+}
+/* ////////////////////////////////////////////////////////////////////////// */
+/* REGISTER/LOGIN */
+
+.wrapper {
+    width: 100vw;
+    height: 100vh;
+    /* border: 2px solid blue; */
+    background: url("./images/background1.jpg");
+    background-size: cover;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    overflow-y: scroll;
+}
+/* // Register containers */
+
+.gridcontainer {
+    position: relative;
+    /* width: 300px;
+    height: 300px; */
+    display: grid;
+    grid-template-columns: 400px;
+    grid-template-rows: auto;
+    grid-template-areas:
+        "treelogocontainer"
+        "descriptioncontainer"
+        "inputscontainer";
+}
+.treelogocontainer {
+    grid-area: treelogocontainer;
+    /* border: 2px solid pink; */
+    display: flex;
+    justify-content: center;
+}
+.descriptioncontainer {
+    grid-area: descriptioncontainer;
+    /* border: 2px solid red; */
+    color: white;
+    padding-left: 20px;
+    padding-right: 20px;
+    padding-bottom: 10px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    text-align: center;
+    font-size: 20px;
+}
+
+.inputscontainer {
+    grid-area: inputscontainer;
+    /* border: 2px solid green; */
+    display: flex;
     justify-content: center;
     align-items: center;
 }
-.headerlinks {
-    /* color: white; */
+/* //////////////// */
+.loginflex {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+}
+.treelogo {
+    width: 300px;
+}
+.logintext {
+    color: white;
+}
+input {
+    background-color: rgb(0, 0, 0, 0.5);
+    /* background-color: rgb(255, 255, 255, 0.2); */
+    color: white;
+    border: 2px solid transparent;
+    border-radius: 4px;
+    width: 250px;
+    height: 35px;
+    margin: 5px;
+}
+input::placeholder {
+    /* Chrome, Firefox, Opera, Safari 10.1+ */
+    color: white;
+    color: rgb(255, 255, 255, 0.7);
+}
+.submit {
+    margin-top: 15px;
+    background-color: rgb(255, 255, 255, 0.2);
+}
+.text {
+    margin-top: 10px;
     font-weight: bold;
+    text-align: center;
+    color: white;
+    font-size: 12px;
+}
+.logintext {
+    font-size: 22px;
+    text-align: center;
+    margin-bottom: 10px;
+}
+/*  //////////////////////////////////////////////////////////////////////////*/
+/* PETITION NEW */
+.petitionwrapper {
+    width: 100vw;
+    height: 100vh;
+    /* border: 2px solid blue; */
+    background: url("./images/background2.jpg");
+    background-size: cover;
+    /* display: flex; */
+    /* justify-content: center;
+    align-items: center; */
+    flex-direction: column;
+    overflow-y: scroll;
 }
 
-/*  //////////////////////////////////////////////////////////////////////////*/
+/* //////////////////////////////////////////////////////////////////////////////// */
 /* PETITION */
 .submitbtn {
     display: flex;
     justify-content: center;
     align-items: center;
 }
-
 .firstlast {
     font-size: 30px;
     margin-bottom: 3px;
 }
-
 .canvas {
     margin-top: 7px;
 }
@@ -152,14 +241,12 @@ canvas {
     white-space: nowrap;
     overflow: hidden;
 }
-
 .center {
     display: flex;
     font-weight: bold;
     width: 100%;
     justify-content: center;
 }
-
 .signersbox {
     display: flex;
     flex-direction: row;
@@ -167,7 +254,6 @@ canvas {
     flex-wrap: wrap;
     justify-content: center;
 }
-
 .allsigners {
     font-size: 16px;
     color: #655c56;
@@ -176,31 +262,17 @@ canvas {
     text-align: center;
 }
 /* ///////////////////////////////////////////////////////////////////////// */
-
 .err {
     font-style: italic;
     color: red;
 }
-
-.sign {
-    width: 200px;
-    -webkit-box-shadow: -3px 0px 17px -4px rgba(5, 2, 5, 1);
-    -moz-box-shadow: -3px 0px 17px -4px rgba(5, 2, 5, 1);
-    box-shadow: -3px 0px 17px -4px rgba(5, 2, 5, 1);
-    border-radius: 5px;
-    margin-top: 10px;
-    background-color: white;
-}
-
 .thankyou {
     margin-top: 20px;
     font-weight: bold;
 }
-
 .king {
     font-size: 12px;
 }
-
 .name {
     font-size: 15px;
     color: #655c56;
@@ -209,19 +281,16 @@ canvas {
     margin-bottom: 10px;
     text-align: center;
 }
-
 .marginleft {
     /* margin-left: 30px; */
     object-fit: contain;
     width: 100%;
 }
-
 .edit {
     display: flex;
     flex-direction: column;
     align-items: center;
 }
-
 .editfields {
     width: 40%;
     padding-top: 10px;
@@ -237,7 +306,6 @@ canvas {
     align-items: center;
     justify-content: center;
 } */
-
 .textbig2 {
     display: flex;
     font-size: 35px;
@@ -248,7 +316,6 @@ canvas {
     min-height: 10vh;
     text-align: center;
 }
-
 /* .intextbig {
     display: flex;
     justify-content: center;
@@ -256,13 +323,20 @@ canvas {
     width: 100%;
     height: 200px;
 } */
-
 .gif {
     text-align: center;
     margin-top: 10px;
 }
-
 .left {
     margin-left: 5px;
     margin-right: 5px;
+}
+/* //////////////////////////////////////////////////////////////////////////////// */
+@media screen and (max-width: 470px) {
+    .descriptioncontainer {
+        font-size: 17px;
+    }
+    .headerlinks {
+        font-size: 12px;
+    }
 }
