--- a/views/register.handlebars
+++ b/views/register.handlebars
@@ -1,19 +1,35 @@
 
 
+<!-- <div class="gridcontainer">
+     <div class="desription">
 
-    <div class="errinform">
-       {{#if err}}
-           This email is already used!
-       {{/if}}
-       {{#if emptyField}}
-          Empty fields!
-       {{/if}}
-       {{#if thanks}}
-          Thanks You for your time, I hope that you will came back!
-       {{/if}}
+     </div>
+     <div class="registerform">
+
+     </div>
+</div> -->
+
+<div class="gridcontainer">
+    <div class="treelogocontainer">
+        <img src="./images/treelogo.svg" class="treelogo">
     </div>
+    <div class="descriptioncontainer">
+        <h1>Petition!</h1>If you agree with the initiative to increase the protection of forest areas covered by the reserve, simply register and sign!
+    </div>
+    <div class="inputscontainer">
+        <form method="POST" >
+            <div class="text">
+                {{#if err}}
+                    This email is already used!
+                {{/if}}
+                {{#if emptyField}}
+                   Empty fields!
+                {{/if}}
+                {{#if thanks}}
+                   Thanks You for your time, I hope that you will came back!
+                {{/if}}
+            </div>
 
-    <form method="POST">
             <div class="input">
                 <input type='text' name='first' placeholder='First Name' autocomplete='off'>
             </div>
@@ -26,10 +42,14 @@
             <div class="input">
                 <input type="password" name='password' placeholder='Password' autocomplete='off'>
             </div>
+
             <input type="submit" value="Sing Up" class="submit">
 
-        <div class="text">
-            If You already have an account: <a href="/login">log in</a>
-        </div>
-        <input type="hidden" name="_csrf" value="{{csrfToken}}">
-    </form>
+            <div class="text">
+                If You already have an account: <a href="/login">log in</a>
+            </div>
+            <input type="hidden" name="_csrf" value="{{csrfToken}}">
+        </form>
+    </div>
+
+</div>
