--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -27,7 +27,7 @@
         </div>
         <input type="submit" value="Log in" class="submit">
         <div class="text">
-            If You dont't have an account: <a href="/register">register</a>
+            If You dont't have an account: <a href="/register" class="loginregister">register</a>
         </div>
         <input type="hidden" name="_csrf" value="{{csrfToken}}">
     </form>
