--- a/views/profile.handlebars
+++ b/views/profile.handlebars
@@ -1,14 +1,19 @@
-{{#if err}}
-    <div class="err">Age is a number!!!!</div>
-{{/if}}
 
 
-<form method="POST">
-    <div class="inputs">
-        <input type='text' name='age' placeholder='Age' autocomplete='off'> <br>
-        <input type="text" name='city' placeholder='City' autocomplete='off'> <br>
-        <input type="text" name='url' placeholder='Home Page' autocomplete='off'> <br>
-    </div>
-    <input type="submit" value="Continue" class="submit">
-    <input type="hidden" name="_csrf" value="{{csrfToken}}">
-</form>
+<div class="loginflex">
+       <div class="intextbig">
+           Now you can share additional info about yourself :)
+       </div>
+   {{#if err}}
+       <div class="text">Age is a number!!!!</div>
+   {{/if}}
+    <form method="POST">
+        <div class="inputs">
+            <input type='text' name='age' placeholder='Age' autocomplete='off'> <br>
+            <input type="text" name='city' placeholder='City' autocomplete='off'> <br>
+            <input type="text" name='url' placeholder='Home Page' autocomplete='off'> <br>
+        </div>
+        <input type="submit" value="Continue" class="submit">
+        <input type="hidden" name="_csrf" value="{{csrfToken}}">
+    </form>
+</div>
