--- a/views/register.handlebars
+++ b/views/register.handlebars
@@ -46,7 +46,7 @@
             <input type="submit" value="Sing Up" class="submit">
 
             <div class="text">
-                If You already have an account: <a href="/login">log in</a>
+                If You already have an account: <a href="/login" class="loginregister">log in</a>
             </div>
             <input type="hidden" name="_csrf" value="{{csrfToken}}">
         </form>
