--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -60,6 +60,9 @@
             <div class="menucontainer">
 
             </div>
+            <div class="overlay zindex">
+
+            </div>
        </div>
 
 
@@ -67,6 +70,7 @@
 
         {{/if}}
 
+    <script src="script.js"></script>
 </body>
 
 
