--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -47,18 +47,26 @@
 
 
            <div class="petitioncontainer">
-                  {{#if moreCoding}}
-                      <div class="intextbig">
-                          More coding!!!!!!!!!!!!!!!
-                      </div>
-                  {{/if}}
-
                <div class="form">
                      {{{ body }}}
                </div>
             </div>
             <div class="menucontainer">
-
+                <div>
+                    <img src="./images/x.svg" class="x">
+                </div>
+                <div class="menulink">
+                    <a href="/edit" class="amenulink">EDIT PROFILE</a>
+                </div>
+                <div class="menulink">
+                    <a href="/signers" class="amenulink">SIGNERS</a>
+                </div>
+                <div class="menulink">
+                    <a href="/thanks" class="amenulink">THANKS</a>
+                </div>
+                <div class="menulink">
+                    <a href="/logout" class="amenulink">LOGOUT</a>
+                </div>
             </div>
             <div class="overlay zindex">
 
