--- a/views/profile.handlebars
+++ b/views/profile.handlebars
@@ -1,6 +1,6 @@
 
 
-<div class="loginflex">
+<div class="profile">
        <div class="intextbig">
            Now you can share additional info about yourself :)
        </div>
