--- a/public/styles.css
+++ b/public/styles.css
@@ -27,7 +27,8 @@ canvas {
     -moz-box-shadow: -3px 0px 17px -4px rgba(5, 2, 5, 1);
     box-shadow: -3px 0px 17px -4px rgba(5, 2, 5, 1);
     border-radius: 5px;
-    background-color: white;
+    /* background-color: white; */
+    background-color: rgb(255, 255, 255, 0.4);
 }
 
 h1 {
@@ -40,7 +41,7 @@ a {
 }
 
 .sign {
-    width: 200px;
+    width: 250px;
     -webkit-box-shadow: -3px 0px 17px -4px rgba(5, 2, 5, 1);
     -moz-box-shadow: -3px 0px 17px -4px rgba(5, 2, 5, 1);
     box-shadow: -3px 0px 17px -4px rgba(5, 2, 5, 1);
@@ -131,9 +132,24 @@ a {
     height: 100vh;
     width: 50%;
     top: 0px;
-    background: white;
+    /* background: black; */
+    background-color: rgb(0, 0, 0, 0.9);
     z-index: 10;
     transition: 2s;
+}
+
+.x {
+    width: 30px;
+    margin: 5px;
+}
+
+.menulink {
+    margin: 10px;
+}
+
+.amenulink {
+    color: white;
+    font-size: 20px;
 }
 
 .move {
@@ -269,6 +285,16 @@ input::placeholder {
     color: green;
     font-size: 13px;
 }
+/* //////////////////////////////////////////////////////////////////////////////// */
+/* PROFILE */
+.profile {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    background-color: rgb(0, 0, 0, 0.4);
+    padding: 30px;
+}
 /*  //////////////////////////////////////////////////////////////////////////*/
 /* PETITION NEW */
 .petition {
@@ -297,7 +323,7 @@ input::placeholder {
 }
 
 .intextbig {
-    border: 2px solid yellow;
+    /* border: 2px solid yellow; */
     display: flex;
     justify-content: center;
     align-items: center;
@@ -306,9 +332,26 @@ input::placeholder {
     width: 300px;
     color: white;
     font-size: 20px;
-    margin-top: 20px;
+    margin-bottom: 20px;
 }
 
+.signpetition {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 20px;
+    color: white;
+    margin: 20px;
+    flex-direction: column;
+    /* width: 280px; */
+}
+
+.user {
+    width: 100%;
+    font-weight: bold;
+    /* margin-bottom: 5px; */
+    color: white;
+}
 /* //////////////////////////////////////////////////////////////////////////////// */
 /* PETITION */
 .submitbtn {
@@ -322,6 +365,9 @@ input::placeholder {
 }
 .canvas {
     margin-top: 7px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 /* ////////////////////////////////////////////////////////////////////////// */
 /* THANKS */
@@ -464,7 +510,7 @@ input::placeholder {
     }
 
     .flexleft {
-        width: auto;
+        /* width: auto; */
     }
 
     .headerlinks {
