--- a/public/styles.css
+++ b/public/styles.css
@@ -47,7 +47,7 @@ a {
     box-shadow: -3px 0px 17px -4px rgba(5, 2, 5, 1);
     border-radius: 5px;
     margin-top: 10px;
-    background-color: white;
+    background-color: rgb(255, 255, 255, 0.4);
 }
 
 .text {
@@ -93,14 +93,14 @@ a {
     justify-content: flex-start;
     align-items: center;
     width: 20%;
-    border: 2px solid pink;
+    /* border: 2px solid pink; */
 }
 .flex {
     display: flex;
     justify-content: flex-end;
     align-items: center;
     width: 79%;
-    border: 2px solid pink;
+    /* border: 2px solid pink; */
 }
 
 .logoinheader {
@@ -109,6 +109,7 @@ a {
     height: 90%;
     /* left: 100px; */
     /* width: 80%; */
+    margin-top: 10px;
 }
 .headerlinks {
     color: white;
@@ -315,7 +316,7 @@ input::placeholder {
 .petitioncontainer {
     width: 100%;
     height: 90vh;
-    border: 2px solid blue;
+    /* border: 2px solid blue; */
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -371,11 +372,17 @@ input::placeholder {
 }
 /* ////////////////////////////////////////////////////////////////////////// */
 /* THANKS */
-.links {
+.buttoninthanks {
+    background-color: rgb(255, 255, 255, 0.2);
+    border-radius: 4px;
+    width: 250px;
+    height: 35px;
     margin: 5px;
+    color: white;
     display: flex;
     justify-content: center;
     align-items: center;
+    font-size: 13px;
 }
 /* ////////////////////////////////////////////////////////////////////////// */
 /* EDIT */
