--- a/views/edit.handlebars
+++ b/views/edit.handlebars
@@ -8,47 +8,71 @@
             {{/if}}
 
             <form method="POST">
-                <div class="allsigners">
-                    Edit Profile
-                </div>
-                <div class="input">
-                    <input type='text' name='first' value='{{first}}' autocomplete='off'><div class="inputdesc">First Name</div>
-                </div>
-                <div class="input">
-                    <input type="text" name='last' value='{{last}}' autocomplete='off'><div class="inputdesc">Last Name</div>
-                </div>
-                <div class="input">
-                    <input type="text" name='email' value='{{email}}' autocomplete='off'><div class="inputdesc">Email</div>
-                </div>
-                <div class="input">
-                    <input type="password" name='password' placeholder='******' autocomplete='off'><div class="inputdesc">Password</div>
-                </div>
-                <div class="input">
-                    <input type='text' name='age' value='{{age}}' autocomplete='off'><div class="inputdesc">Age</div>
-                </div>
-                <div class="input">
-                    <input type="text" name='city' value='{{city}}' autocomplete='off'><div class="inputdesc">City</div>
-                </div>
-                <div class="input">
-                    <input type="text" name='url' value='{{url}}' autocomplete='off'><div class="inputdesc">Home Page</div>
-                </div>
-                <div class="input">
-                    <input type="submit" value="update" class="submit">
-                </div>
-                <div>
-                    <img src="{{sign}}" class="sign"><div></div>
-                </div>
-                <input type="hidden" name="_csrf" value="{{csrfToken}}">
-            </form>
-            {{#if sign}}
-                <form action="/delete" method="POST">
+                <div class="profile">
+                    <!-- <div class="allsigners">
+                        Edit Profile
+                    </div> -->
+                    <div class="inputdesc">First Name</div>
+                    <div class="input">
+                        <input type='text' name='first' value='{{first}}' autocomplete='off'>
+                    </div>
+                    <div class="inputdesc">Last Name</div>
+                    <div class="input">
+                        <input type="text" name='last' value='{{last}}' autocomplete='off'>
+                    </div>
+                    <div class="inputdesc">Email</div>
+                    <div class="input">
+                        <input type="text" name='email' value='{{email}}' autocomplete='off'>
+                    </div>
+                    <div class="inputdesc">Password</div>
+                    <div class="input">
+                        <input type="password" name='password' placeholder='******' autocomplete='off'>
+                    </div>
+                    <div class="inputdesc">Age</div>
+                    <div class="input">
+                        <input type='text' name='age' value='{{age}}' autocomplete='off'>
+                    </div>
+                    <div class="inputdesc">City</div>
+                    <div class="input">
+                        <input type="text" name='city' value='{{city}}' autocomplete='off'>
+                    </div>
+                    <div class="inputdesc">Home Page</div>
+                    <div class="input">
+                        <input type="text" name='url' value='{{url}}' autocomplete='off'>
+                    </div>
+                    <div class="input">
+                        <input type="submit" value="Update profile" class="submit">
+                    </div>
+                    <div>
+                        <img src="{{sign}}" class="sign"><div></div>
+                    </div>
+
                     <input type="hidden" name="_csrf" value="{{csrfToken}}">
-                    <button type="submit" name="button">Delete your signature</button>
-                </form>
-            {{/if}}
-            <form action="/deleteaccount" method="POST">
-                <input type="hidden" name="_csrf" value="{{csrfToken}}">
-                <button type="submit" name="button">Delete account</button>
+
+                    {{#if sign}}
+                        <!-- <form action="/delete" method="POST">
+                            <input type="hidden" name="_csrf" value="{{csrfToken}}">
+                            <button type="submit" name="button" class="buttoninthanks">Delete your signature</button>
+                        </form> -->
+
+                        <a href="delete">
+                            <div class="buttoninthanks">
+                                Delete your signature
+                            </div>
+                        </a>
+                    {{/if}}
+                    <!-- <form action="/deleteaccount" method="POST">
+                        <input type="hidden" name="_csrf" value="{{csrfToken}}">
+                        <button type="submit" name="button" class="buttoninthanks">Delete account</button>
+                    </form> -->
+
+                    <a href="deleteaccount">
+                        <div class="buttoninthanks">
+                            Delete account
+                        </div>
+                    </a>
+                </div>
             </form>
+
         <!-- </div> -->
     <!-- </div> -->
