--- a/views/petition.handlebars
+++ b/views/petition.handlebars
@@ -8,10 +8,10 @@
             <div class="signpetition">
                 <div class="user">
                     Dear {{first}},
-                </div> 
+                </div>
                 here you can sign the petition:
             </div>
-            <div class="errinform">
+            <div class="text">
                 {{#if err}}
                     Something went wrong, try again!
                 {{/if}}
