--- a/public/styles.css
+++ b/public/styles.css
@@ -73,7 +73,7 @@ a {
     width: 100%;
     /* margin-top: 30px; */
     /* padding-right: 30px; */
-    /* margin-bottom: 30px; */
+    margin-bottom: 20px;
     height: 95px;
     /* background-color: rgb(0, 0, 0, 0.3); */
     /* height: 50px; */
@@ -383,13 +383,15 @@ input::placeholder {
     justify-content: center;
     align-items: center;
     font-size: 13px;
+    border: 2px solid transparent;
 }
 /* ////////////////////////////////////////////////////////////////////////// */
 /* EDIT */
 .inputdesc {
     font-size: 13px;
-    color: #655c56;
+    color: white;
     font-weight: bold;
+    margin-top: 10px;
 }
 /* ////////////////////////////////////////////////////////////////////////// */
 /* SIGNERS */
@@ -507,6 +509,10 @@ input::placeholder {
         height: 100vh;
         width: 100vw;
     } */
+
+    .header {
+        margin-bottom: 20px;
+    }
 }
 
 @media screen and (max-width: 470px) {
