--- a/views/deleteaccount.handlebars
+++ b/views/deleteaccount.handlebars
@@ -1,3 +1,3 @@
 <div class="textbig2">
-    Thank you for your time!!! I hope You will came back :)
+    Thank you for your time!!! I hope You will come back :)
 </div>
