--- a/views/thanks.handlebars
+++ b/views/thanks.handlebars
@@ -1,6 +1,6 @@
 
 <form action="/delete" method="POST">
-    <div class="profile">
+    <div class="profilecontainer">
         <div class="signpetition">
             <div class="user">
                {{first}} {{last}},
