--- a/public/styles.css
+++ b/public/styles.css
@@ -296,6 +296,18 @@ input::placeholder {
     background-color: rgb(0, 0, 0, 0.4);
     padding: 30px;
 }
+
+.profilecontainer {
+    margin-bottom: 150px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    background-color: rgb(0, 0, 0, 0.4);
+    padding: 28px;
+    min-height: 400px;
+}
+
 /*  //////////////////////////////////////////////////////////////////////////*/
 /* PETITION NEW */
 .petition {
@@ -315,7 +327,7 @@ input::placeholder {
 
 .petitioncontainer {
     width: 100%;
-    height: 90vh;
+    min-height: 90vh;
     /* border: 2px solid blue; */
     display: flex;
     flex-direction: column;
@@ -422,10 +434,12 @@ input::placeholder {
 }
 .signersbox {
     display: flex;
-    flex-direction: row;
-    width: 100%;
-    flex-wrap: wrap;
-    justify-content: center;
+    /* flex-direction: row; */
+    width: 90%;
+    height: 90%;
+    /* flex-wrap: wrap;
+    justify-content: center; */
+    border: 2px solid pink;
 }
 .allsigners {
     font-size: 16px;
