--- a/views/petition.handlebars
+++ b/views/petition.handlebars
@@ -4,7 +4,7 @@
 
     <form method="POST">
 
-        <div class="profile">
+        <div class="profilecontainer">
             <div class="signpetition">
                 <div class="user">
                     Dear {{first}},
