--- a/views/signers.handlebars
+++ b/views/signers.handlebars
@@ -1,33 +1,36 @@
 <!-- <img src="duck.jpg"> -->
 
-<div class="allsigners">
-    <p>All {{numOfSigns}} signers:<p>
-</div>
 
-<!-- <div class="container"> -->
-    <!-- <div class="signersbox"> -->
-<div class="signersbox">
+
+
+<!-- <div class="signersbox"> -->
+    <div class="profile">
+        <div class="user">
+            <p>All {{numOfSigns}} signers:<p>
+        </div>
         {{#allInfo}}
            {{#if url}}
-           <div class="signers">
-               <div class="center">
-                  <a href="{{url}}"> {{first}} {{last}}</a><div class="left">{{age}}</div> <a href="/signers/{{city}}">{{city}}</a>
-               </div>
-               <div>
+           <!-- <div class="signers">
+               <div class="center"> -->
+                  <a href="{{url}}"> {{first}} {{last}}</a><div class="left">age: {{age}}</div> <a href="/signers/{{city}}">from: {{city}}</a>
+               <!-- </div> -->
+               <!-- <div>
                    <img src="{{signature}}" class="sign">
-               </div>
-            </div>
+               </div> -->
+            <!-- </div> -->
            {{else}}
-               <div class="signers">
-                   <div class="center">
-                       {{first}} {{last}} <div class="left">{{age}}</div> <a href="/signers/{{city}}">{{city}}</a>                       </div>
-                    <div>
+               <!-- <div class="signers">
+                   <div class="center"> -->
+                       {{first}} {{last}} <div class="left">{{age}}</div> <a href="/signers/{{city}}">{{city}}</a>
+                   <!-- </div> -->
+                    <!-- <div>
                        <img src="{{signature}}" class="sign">
-                   </div>
-                </div>
+                   </div> -->
+                <!-- </div> -->
            {{/if}}
 
         {{/allInfo}}
-</div>
-    <!-- </div> -->
+    </div>
+
+
 <!-- </div> -->
