--- a/views/city.handlebars
+++ b/views/city.handlebars
@@ -3,10 +3,10 @@
     <div class="signersbox">
         <div class="allsigners">
 
-            All signers in city: {{cityOne}}
+            All signers in city: {{city}}
 
         </div>
-            {{#city}}
+            {{#cities}}
                {{#if url}}
                <div class="signers">
                    <div class="center">
@@ -27,6 +27,6 @@
                     </div>
                {{/if}}
 
-            {{/city}}
+            {{/cities}}
 
     </div>
