--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -47,9 +47,9 @@
 
 
            <div class="petitioncontainer">
-               <div class="form">
+               <!-- <div class="form"> -->
                      {{{ body }}}
-               </div>
+               <!-- </div> -->
             </div>
             <div class="menucontainer">
                 <div>
